--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "com.unity.ide.vscode": "1.0.7",
-    "com.unity.render-pipelines.universal": "7.0.1",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.2",
+    "com.unity.package-manager-ui": "2.1.2",
+    "com.unity.render-pipelines.lightweight": "5.7.2",
+    "com.unity.shadergraph": "5.7.2",
+    "com.unity.textmeshpro": "2.0.0",
+    "com.unity.timeline": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
-    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
