--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.1.2",
+    "com.unity.collections": "0.1.1-preview",
+    "com.unity.entities": "0.1.1-preview",
+    "com.unity.jobs": "0.1.1-preview",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.render-pipelines.lightweight": "5.7.2",
+    "com.unity.rendering.hybrid": "0.1.1-preview",
     "com.unity.shadergraph": "5.7.2",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.0.0",
